Fix overflow bug

--- a/_sass/layout/_header.scss
+++ b/_sass/layout/_header.scss
@@ -47,6 +47,7 @@
 	background-color: black;
 	background-size: cover;
 	text-indent: 1000in;
+	overflow: hidden;
 	color: white;
 
 	@media ( max-width: 600px ) {
